opam-version: "2.0"
maintainer: "rudi.grinberg@gmail.com"
authors: ["Rudi Grinberg" "Armaël Guéneau"]
license: "MIT"
homepage: "https://github.com/rgrinberg/ocaml-mustache"
doc: "http://rgrinberg.github.io/mustache/"
bug-reports: "https://github.com/rgrinberg/ocaml-mustache/issues"
depends: [
  "ocaml" {>= "4.02.3"}
  "dune" {build}
  "base-unix"
  "mustache"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/rgrinberg/ocaml-mustache.git"
synopsis: "Unix utilitie for Mustache logic-less templates in OCaml"
description: """
Contains the `mustache-cli` command line utility for driving
Mustache logic-less templates.
"""
