opam-version: "2.0"
maintainer: "rudi.grinberg@gmail.com"
authors: ["Rudi Grinberg" "Armaël Guéneau"]
license: "MIT"
homepage: "https://github.com/rgrinberg/ocaml-mustache"
doc: "http://rgrinberg.github.io/mustache/"
bug-reports: "https://github.com/rgrinberg/ocaml-mustache/issues"
depends: [
  "ocaml" {>= "4.03"}
  "dune" {build}
  "menhir"
  "ounit" {with-test}
  "ezjsonm" {with-test}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/rgrinberg/ocaml-mustache.git"
synopsis: "Mustache logic-less templates in OCaml"
description: """
Read and write mustache templates, and render them by providing a json object.
"""
